...
      feedUrl: 'https://www.enpleineconscience.ch/feed/podcast/les-causeries-denpleineconscience-ch',
      displayName: "Les causeries d'enpleineconscience.ch",
      oldestFirst: false,
    ),
    MeditationFeed(
      feedUrl: 'https://www.enpleineconscience.ch/feed/podcast/bodyscan',
      displayName: 'Bodyscan',
    ),
    MeditationFeed(
      feedUrl: 'https://www.enpleineconscience.ch/feed/podcast/assise-respiration',
      displayName: 'Assises centr\u00e9es sur la respiration',
    ),
    MeditationFeed(
...
